# MusicPlayer

./: CMakeLists.txt  audio_decoder.cpp  audio_decoder.h  audio_decoder_thread.cpp  audio_decoder_thread.h  audio_packet.h  audio_player.cpp  audio_player.h  database_manager.cpp  database_manager.h  digital_time_label.cpp  digital_time_label.h  fftreal.h  lyrics_parser.cpp  lyrics_parser.h  lyrics_widget.cpp  lyrics_widget.h  main.cpp  mainwindow.cpp  mainwindow.h  music_management_dialog.cpp  music_management_dialog.h  playback_controller.cpp  playback_controller.h  player_window.cpp  player_window.h  playlist_data.h  playlist_manager.cpp  playlist_manager.h  playlist_window.cpp  playlist_window.h  quick_editor.cpp  quick_editor.h  resources.qrc  scrolling_text_label.cpp  scrolling_text_label.h  spectrum_processor.cpp  spectrum_processor.h  spectrum_widget.cpp  spectrum_widget.h  (+5 more)
style/: stylesheet.qss
